# web-scraper

./: .dockerignore  .env  .gitignore  .yamllint  Dockerfile  Main Branch Protection.json  README.md  compose-dev.yml  compose.yml  config.toml.example  example.env  lint.sh  pyproject.toml  renovate.json  requirements.txt  sample.env
.github/: renovate.json
.github/workflows/: ci-cd.yml  deploy.yml  security.yml  sync.yml
scripts/: lint.sh  test.sh  update.sh
src/: __init__.py  email_sender.py  healthcheck.py  main.py  webscrapper.py
src/scrappers/: cars_com.py  diff.py  generic.py  text.py  text_search.py
src/scrappers/data/: previous_cars.csv
src/scrappers/data/archive/: cars_2024-05-25 22:04:25.068758.csv
tests/: test_startup.py
