[project]
name = "webscrapper"
version = "0.1.0"
description = "Web Scrapper"
authors = [
    {name = "Jack Stockley", email = "jack@jstockley.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 ==4.14.2",
    "pandas ==2.3.3",
    "typing-extensions ==4.15.0",
    "python-dotenv ==1.1.1",
    "tls-client ==1.0.1"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "==0.14.0"

