[project]
name = "js-web-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "tls-client>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.2",
]
